# blaze-html-qq

./: CHANGELOG.md  README.md  blaze-html-qq.cabal  stack.yaml
.github/workflows/: ci.yml
icebox/Text/XML/: QQ.hs
src/Text/Blaze/HTML/: QQ.hs
src/Text/Blaze/HTML/QQ/: Internal.hs
src/Text/Blaze/Html/: QQ.hs
src/Text/Blaze/Html/QQ/: Internal.hs
