name:                blaze-html-qq
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ocramz/blaze-html-qq
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2023 Author name here
category:            Acme
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md
cabal-version:       >=1.10
tested-with:         GHC == 7.10.2

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  exposed-modules:     Text.Blaze.HTML.QQ
  build-depends:       base >= 4.7 && < 5
                     , blaze-html
                     , blaze-markup
                     , bytestring
                     , html-conduit
                     , text
                     , xml-conduit
                     , template-haskell
  ghc-options:         -Wall

-- executable blaze-html-qq
--   default-language:    Haskell2010
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   build-depends:       base
--                      , blaze-html-qq
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints
--                        -threaded
--                        -rtsopts
--                        -with-rtsopts=-N

-- test-suite spec
--   default-language:    Haskell2010
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   other-modules:       LibSpec
--   build-depends:       base
--                      , blaze-html-qq
--                      , hspec
--                      , QuickCheck
--   ghc-options:         -Wall
--                        -Wcompat
--                        -Widentities
--                        -Wincomplete-record-updates
--                        -Wincomplete-uni-patterns
--                        -Wmissing-export-lists
--                        -Wmissing-home-modules
--                        -Wpartial-fields
--                        -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/ocramz/blaze-html-qq
